# python_module

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/rwmath/: __init__.py  math.py
tests/: test_math.py
