[project]
name = "rw_math"
version = "0.1.0"
description = "Test to upload math module to Pypi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
rw_math = "src.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=src/rwmath",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
